Added User Token and Token Key Validator
