# docs/swagger.yaml
@@ -96,4 +96,9 @@ paths:
       summary: Get all users
       tags:
       - Users
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
